@@ -1,4 +1,5 @@
 import java.time.LocalDateTime
+import java.time.format.DateTimeFormatter
 
 apply plugin: 'maven-publish'
 apply plugin: 'signing'
@@ -43,50 +44,50 @@ gradle.projectsEvaluated {
                 '--add-exports=java.desktop/sun.awt=ALL-UNNAMED',
                 '--add-exports=java.desktop/sun.font=ALL-UNNAMED',
                 '--add-exports=java.base/sun.security.action=ALL-UNNAMED',
-                '--add-opens=java.base/java.lang=ALL-UNNAMED',
-                '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED',
-                '--add-opens=java.base/java.lang.invoke=ALL-UNNAMED',
-                '--add-opens=java.base/java.util=ALL-UNNAMED',
-                '--add-opens=java.base/sun.net=ALL-UNNAMED',
-                '--add-opens=java.base/java.math=ALL-UNNAMED',
-                '--add-opens=java.base/sun.reflect.annotation=ALL-UNNAMED',
-                '--add-opens=java.base/sun.net=ALL-UNNAMED',
-                '--add-opens=java.desktop/sun.awt=ALL-UNNAMED',
-                '--add-opens=java.desktop/sun.font=ALL-UNNAMED',
-                '--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED',
-                '--add-opens=java.base/sun.security.action=ALL-UNNAMED',
-                '--add-opens=java.base/java.lang=ALL-UNNAMED',
-                '--add-opens=java.base/java.math=ALL-UNNAMED',
-                '--add-opens=java.base/java.util=ALL-UNNAMED',
-                '--add-opens=java.base/sun.util.calendar=ALL-UNNAMED',
-                '--add-opens=java.base/java.util.concurrent=ALL-UNNAMED',
-                '--add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED',
-                '--add-opens=java.base/java.security=ALL-UNNAMED',
-                '--add-opens=java.base/jdk.internal.loader=ALL-UNNAMED',
-                '--add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED',
-                '--add-opens=java.base/java.net=ALL-UNNAMED',
-                '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED',
-                '--add-opens=java.management/java.lang.management=ALL-UNNAMED',
-                '--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED',
-                '--add-opens=java.management/sun.management=ALL-UNNAMED',
-                '--add-opens=java.base/sun.security.action=ALL-UNNAMED',
-                '--add-opens=java.management/java.lang.management=ALL-UNNAMED',
-                '--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED',
-                '--add-opens=java.management/sun.management=ALL-UNNAMED',
-                '--add-opens=java.base/java.time=ALL-UNNAMED',
-                '--add-opens=java.base/java.util.concurrent=ALL-UNNAMED',
-                '--add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED',
-                '--add-opens=java.base/java.security=ALL-UNNAMED',
-                '--add-opens=java.base/jdk.internal.loader=ALL-UNNAMED',
-                '--add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED',
-                '--add-opens=java.base/java.net=ALL-UNNAMED',
-                '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED',
-                '--add-opens=java.base/java.lang=ALL-UNNAMED',
-                '--add-opens=java.base/java.math=ALL-UNNAMED',
-                '--add-opens=java.base/java.util=ALL-UNNAMED',
-                '--add-opens=java.base/sun.util.calendar=ALL-UNNAMED',
-                '--add-opens=java.base/sun.net.util=ALL-UNNAMED',
-                '--add-opens=java.base/sun.net.util=ALL-UNNAMED'
+                '--add-exports=java.base/java.lang=ALL-UNNAMED',
+                '--add-exports=java.base/java.lang.reflect=ALL-UNNAMED',
+                '--add-exports=java.base/java.lang.invoke=ALL-UNNAMED',
+                '--add-exports=java.base/java.util=ALL-UNNAMED',
+                '--add-exports=java.base/sun.net=ALL-UNNAMED',
+                '--add-exports=java.base/java.math=ALL-UNNAMED',
+                '--add-exports=java.base/sun.reflect.annotation=ALL-UNNAMED',
+                '--add-exports=java.base/sun.net=ALL-UNNAMED',
+                '--add-exports=java.desktop/sun.awt=ALL-UNNAMED',
+                '--add-exports=java.desktop/sun.font=ALL-UNNAMED',
+                '--add-exports=jdk.management/com.sun.management.internal=ALL-UNNAMED',
+                '--add-exports=java.base/sun.security.action=ALL-UNNAMED',
+                '--add-exports=java.base/java.lang=ALL-UNNAMED',
+                '--add-exports=java.base/java.math=ALL-UNNAMED',
+                '--add-exports=java.base/java.util=ALL-UNNAMED',
+                '--add-exports=java.base/sun.util.calendar=ALL-UNNAMED',
+                '--add-exports=java.base/java.util.concurrent=ALL-UNNAMED',
+                '--add-exports=java.base/java.util.concurrent.locks=ALL-UNNAMED',
+                '--add-exports=java.base/java.security=ALL-UNNAMED',
+                '--add-exports=java.base/jdk.internal.loader=ALL-UNNAMED',
+                '--add-exports=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED',
+                '--add-exports=java.base/java.net=ALL-UNNAMED',
+                '--add-exports=java.base/sun.nio.ch=ALL-UNNAMED',
+                '--add-exports=java.management/java.lang.management=ALL-UNNAMED',
+                '--add-exports=jdk.management/com.sun.management.internal=ALL-UNNAMED',
+                '--add-exports=java.management/sun.management=ALL-UNNAMED',
+                '--add-exports=java.base/sun.security.action=ALL-UNNAMED',
+                '--add-exports=java.management/java.lang.management=ALL-UNNAMED',
+                '--add-exports=jdk.management/com.sun.management.internal=ALL-UNNAMED',
+                '--add-exports=java.management/sun.management=ALL-UNNAMED',
+                '--add-exports=java.base/java.time=ALL-UNNAMED',
+                '--add-exports=java.base/java.util.concurrent=ALL-UNNAMED',
+                '--add-exports=java.base/java.util.concurrent.locks=ALL-UNNAMED',
+                '--add-exports=java.base/java.security=ALL-UNNAMED',
+                '--add-exports=java.base/jdk.internal.loader=ALL-UNNAMED',
+                '--add-exports=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED',
+                '--add-exports=java.base/java.net=ALL-UNNAMED',
+                '--add-exports=java.base/sun.nio.ch=ALL-UNNAMED',
+                '--add-exports=java.base/java.lang=ALL-UNNAMED',
+                '--add-exports=java.base/java.math=ALL-UNNAMED',
+                '--add-exports=java.base/java.util=ALL-UNNAMED',
+                '--add-exports=java.base/sun.util.calendar=ALL-UNNAMED',
+                '--add-exports=java.base/sun.net.util=ALL-UNNAMED',
+                '--add-exports=java.base/sun.net.util=ALL-UNNAMED'
         ]
     }
 }
@@ -132,7 +133,7 @@ jar {
                 'Built-Gradle': gradle.gradleVersion,
                 'Build-OS': System.getProperty("os.name"),
                 'Build-Jdk': System.getProperty("java.version"),
-                'Build-Timestamp': LocalDateTime.now().format("yyyy-MM-dd HH:mm:ss")
+                'Build-Timestamp': LocalDateTime.now().format(DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss"))
         )
     }
 }
